--- a/backend/package.json
+++ b/backend/package.json
@@ -33,7 +33,8 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "pdfkit": "^0.17.2",
-    "pg": "^8.18.0"
+    "pg": "^8.18.0",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@types/node": "^25.2.3",
