--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,14 +1,17 @@
 {
     "compilerOptions": {
-        "target": "es2020",
-        "module": "commonjs",
+        "target": "ES2020",
+        "module": "ESNext",
+        "moduleResolution": "bundler",
         "strict": true,
         "esModuleInterop": true,
+        "skipLibCheck": true,
+        "allowSyntheticDefaultImports": true,
         "types": [
             "node"
         ]
     },
     "include": [
-        "prisma.config.ts"
+        "src/**/*"
     ]
 }
